test/langtools/tools/javac/enum/FauxEnum3.out
FauxEnum3.java:11:8: compiler.err.enum.types.not.extensible
1 error